--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -70,10 +70,9 @@
           </div>
         </div>
       </main>
-      <footer
-        class="container-fluid text-center mt-auto py-3"
-        id="footer"
-      ></footer>
+      <div class="footerContainer">
+      <footer id="footer"></footer>
+    </div>
     </div>
   </body>
   <script src="/public/js/template-renderer.js"></script>
