--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/public/css/public.css" />
   </head>
 
-  <body class="min-vh-100">
+  <body>
     <div class="pageWraper">
       <nav
         class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
@@ -40,10 +40,7 @@
           </div>
         </div>
       </section>
-      <footer
-        class="container-fluid text-center mt-auto py-3"
-        id="footer"
-      ></footer>
+      
       <div id="toPrevious" class="position-fixed top-50 start-0 d-none">
         <a href="" id="previousPage">
           <i
@@ -60,6 +57,7 @@
           ></i>
         </a>
       </div>
+      <footer id="footer"></footer>
     </div>
   </body>
   <script src="/public/js/template-renderer.js"></script>
