--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -217,10 +217,7 @@
           <div class="col-3"></div>
         </div>
       </div>
-      <footer
-        class="container-fluid text-center mt-auto py-3"
-        id="footer"
-      ></footer>
+      <footer id="footer"></footer>
     </div>
   </body>
   <script src="/public/js/template-renderer.js"></script>
