--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -30,6 +30,7 @@
   </head>
 
   <body>
+    <div class="pageWraper">
     <nav
       class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top mb-3"
       id="nav"
@@ -156,6 +157,8 @@
         <div class="col-3"></div>
       </div>
     </div>
+    <footer id="footer"></footer>
+  </div>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <footer class="container-fluid text-center mt-3" id="footer"></footer>
     <script src="/public/js/template-renderer.js"></script>
