--- a/src/views/admin/admin.css
+++ b/src/views/admin/admin.css
@@ -31,11 +31,21 @@ img {
 }
 
 .add {
-  width: 90px;
-  height: 50px;
+  font-size: xx-large;
+  width: 70px;
+  height: 80px;
   position: fixed;
-  bottom: 90px;
-  right: 200px;
+  bottom: 100px;
+  right: 150px;
+}
+
+.back {
+  font-size: large;
+  width: 70px;
+  height: 80px;
+  position: fixed;
+  bottom: 100px;
+  left: 150px;
 }
 
 .btn-outline-danger {
