--- a/src/views/adminPost/adminPost.css
+++ b/src/views/adminPost/adminPost.css
@@ -1,5 +1,5 @@
 .text-center{
-    margin-top: 90px;
+    margin: 30px 0;
 }
 
 #btnInput{   
@@ -26,3 +26,11 @@
     margin: 30px 20px 30px auto;
     /* margin-left: auto; */
 }
+
+.btnContainer{
+    display: flex;
+}
+
+/* .btnInput{
+    margin-right: auto;
+} */
