--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -78,10 +78,7 @@
           </div>
         </div>
       </section>
-      <footer
-        class="container-fluid text-center mt-auto py-3"
-        id="footer"
-      ></footer>
+      <footer id="footer"></footer>
     </div>
   </body>
   <script src="/public/js/template-renderer.js"></script>
