--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -56,7 +56,7 @@
                                         </div>
                                         <div class="col-6">
 
-                                            <button type="button" class="btn btn-primary" id="searchAddressButton">주소 찾기</button>
+                                            <button type="button" class="btn btn-primary able-when-edit" id="searchAddressButton">주소 찾기</button>
                                         </div>
                                     </div>
                                     <div class="row">
