--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -104,13 +104,16 @@
                       placeholder="초기화하려는 이메일을 입력하세요!"
                       id="resetInput"
                     />
-                    <button
+                    <input
+                      type="text"
+                      placeholder="핸드폰 번호를 입력하세요!"
+                      id="resetPhoneNuber"
+                    />
+                    <input
                       type="submit"
-                      class="mt-3 btn btn-warning"
-                      class="submit-btn"
-                    >
-                      비밀번호 초기화
-                    </button>
+                      class="btn btn-warning submit-btn"
+                      value="비밀번호 초기화"
+                    />
                   </form>
                 </div>
               </div>
