--- a/src/views/adminPost/adminPost.html
+++ b/src/views/adminPost/adminPost.html
@@ -49,9 +49,7 @@
 
               </div>
               <div class="input-group mb-3">
-                <!-- <span class="input-group-text" id="inputGroup-sizing-default">설명</span>
-                <input type="textarea" name="description" id="description" class="form-control"
-                  aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"> -->
+
                
                   
                   <div class="form-floating">
@@ -65,7 +63,7 @@
               <label for="formFile" class="form-label"></label>
               <div class="flexContainer">
                 <input class="form-control thumbanil" id="formFile" name="image" type="file" id="formFile">
-                <input type="submit" value="등록" class="btnInput">
+                <input type="submit" value="등록" class="btnInput" id="disableBtn">
               </div>
             </form>
 
@@ -129,7 +127,7 @@
         <div class="col-2"></div>
       </div>
     </div>
-    <footer class="container-fluid text-center mt-auto py-3" id="footer"></footer>
+    <footer id="footer"></footer>
   </div>
   <!-- <script src="adminPost.js" type="module" defer></script> -->
 </body>
