--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -220,6 +220,7 @@
           <div class="col-3"></div>
         </div>
       </div>
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
   </body>
