--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -78,6 +78,7 @@
           </div>
         </div>
       </section>
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
   </body>
