--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -160,6 +160,7 @@
         </div>
       </main>
     </div>
+    <section class="footerSection"></section>
     <footer id="footer"></footer>
   </body>
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
