--- a/src/views/orderLookup/orderLookup.html
+++ b/src/views/orderLookup/orderLookup.html
@@ -72,10 +72,8 @@
         </div>
       </div>
 
-      <footer
-        class="container-fluid text-center mt-auto py-3"
-        id="footer"
-      ></footer>
+      <section class="footerSection"></section>
+      <footer id="footer"></footer>
     </div>
   </body>
   <script src="/public/js/template-renderer.js"></script>
