--- a/src/views/order_confirm/order_confirm.html
+++ b/src/views/order_confirm/order_confirm.html
@@ -54,10 +54,8 @@
           </button>
         </div>
       </main>
-      <footer
-        class="container-fluid text-center mt-auto py-3"
-        id="footer"
-      ></footer>
+      <section class="footerSection"></section>
+      <footer id="footer"></footer>
     </div>
   </body>
   <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
