--- a/src/views/search/search.html
+++ b/src/views/search/search.html
@@ -46,6 +46,7 @@
           </div>
         </div>
       </section>
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
     <script src="/public/js/template-renderer.js"></script>
