--- a/src/views/adminUser/adminUser.html
+++ b/src/views/adminUser/adminUser.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="adminUser.css" />
+    <link rel="stylesheet" href="/public/css/public.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="adminUser.css">
-  <link rel="stylesheet" href="/public/css/public.css" />
-</head>
+  <body>
+    <div class="pageWraper">
+      <nav
+        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top"
+        id="nav"
+      ></nav>
+   
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-0.2"></div>
+          <div class="col-11.6" id="usersConainer">
+            <table
+              class="table table-hover table-bordered"
+              style="table-layout: fixed"
+            >
+              <thead>
+                <tr>
+                  <th scope="col" width="200rem">이메일</th>
+                  <th scope="col" width="100rem">이름</th>
+                  <th scope="col" width="150rem">전화번호</th>
+                  <th scope="col" width="350rem">주소</th>
+                  <th scope="col" width="80rem">권한</th>
+                </tr>
+              </thead>
+              <tbody id="userList">
+                <tr></tr>
+              </tbody>
+            </table>
+            <div style="display: flex">
+              <a class="btn btn-danger ms-5" href="javascript:history.back()"
+                >뒤로가기</a
+              >
 
-<body>
-  <div class="pageWraper">
-    <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top" id="nav"></nav>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-0.2"></div>
-        <div class="col-11.6" id="usersConainer">
-
-          <table class="table table-hover table-bordered" style="table-layout: fixed">
-
-            <thead>
-              <tr>
-                <th scope="col" width="200rem">이메일</th>
-                <th scope="col" width="100rem">이름</th>
-                <th scope="col" width="150rem">전화번호</th>
-                <th scope="col" width="350rem">주소</th>
-                <th scope="col" width="80rem">권한</th>
-              </tr>
-            </thead>
-            <tbody id="userList">
-              <tr>
-
-
-              </tr>
-            </tbody>
-          </table>
-          <div style="display: flex;">
-
-
-            <a class="btn btn-danger ms-5" href="javascript:history.back()">뒤로가기</a>
-
-            <button type="button" id="roleBtn" class="btn btn-danger">권한 변경</button>
-
+              <button type="button" id="roleBtn" class="btn btn-danger">
+                권한 변경
+              </button>
+            </div>
           </div>
+          <div class="col-0.2"></div>
         </div>
-        <div class="col-0.2"></div>
       </div>
-
-    </div>
-    <footer class="container-fluid text-center mt-auto py-3" id="footer"></footer>
+  
+    
+      <section class="forSection"></section>
+      <footer id="footer"></footer>
   </div>
-</body>
-<script src="adminUser.js" type="module" defer></script>
-<script src="/public/js/template-renderer.js"></script>
-
+    
+  </body>
+  <script src="adminUser.js" type="module" defer></script>
+  <script src="/public/js/template-renderer.js"></script>
 </html>
