--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -70,9 +70,9 @@
           </div>
         </div>
       </main>
-      <div class="footerContainer">
+
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
-    </div>
     </div>
   </body>
   <script src="/public/js/template-renderer.js"></script>
