--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -57,6 +57,7 @@
           ></i>
         </a>
       </div>
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
   </body>
