--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -119,6 +119,7 @@
           </div>
         </div>
       </div>
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
     <script src="/public/js/template-renderer.js"></script>
