--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -155,6 +155,7 @@
           </div>
         </div>
       </div>
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
   </body>
