--- a/src/views/public/css/public.css
+++ b/src/views/public/css/public.css
@@ -58,8 +58,8 @@
 .pageWraper {
   min-height: 100vh;
 position: relative;
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 #footer {
@@ -75,4 +75,8 @@ position: relative;
 .footerItem{
 height: 100px;
 padding: 0;
+}
+
+.footerSection{
+  flex: 1;
 }
