--- a/src/views/userOrder/userOrder.html
+++ b/src/views/userOrder/userOrder.html
@@ -56,6 +56,7 @@
           <div class="col-0.2"></div>
         </div>
       </div>
+      <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
   </body>
