feat: 마무리 작업

--- a/src/views/order_confirm/order_confirm.html
+++ b/src/views/order_confirm/order_confirm.html
@@ -36,8 +36,8 @@
         <div id="orderInfoDiv" class="text-center">
           <p id="header-message">주문이 완료되었습니다!</p>
           <p id="number">
-            비회원 주문 조회를 위해 주문번호,<br />
-            핸드폰 번호를 꼭 저장해주세요!
+            비회원 주문 조회는 주문번호,<br />
+            핸드폰 번호가 필요하니 꼭 저장해주세요!
           </p>
           <div class="important">
             <p>주문번호</p>
@@ -45,13 +45,6 @@
             <p>핸드폰 번호</p>
             <p id="orderNumberOutput"></p>
           </div>
-          <button type="button" id="orderCheckButton">주문 확인하기</button>
-          <button type="button" id="orderListButton" hidden>
-            주문 목록보기
-          </button>
-          <button type="button" id="continumShoppingButton">
-            쇼핑 계속하기
-          </button>
         </div>
       </main>
       <section class="footerSection"></section>
