--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -1,90 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title></title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
-    <script
-      defer
-      src="https://kit.fontawesome.com/9daa42bcef.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+    <script defer src="https://kit.fontawesome.com/9daa42bcef.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script src="register.js" type="module" defer></script>
     <link rel="stylesheet" href="register.css" />
     <link rel="stylesheet" href="/public/css/public.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="pageWraper">
-      <nav
-        class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top mb-3"
-        id="nav"
-      ></nav>
+        <nav class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top mb-3" id="nav"></nav>
 
-      <div class="container mb-4" id="container">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-              <div class="register-user-form-container">
-                <form class="" id="registerUserForm">
-                  <p class="title is-5 text-dark text-center mb-2" id="title">
-                    회원가입
-                  </p>
-                  <div class="field">
-                    <label class="label" for="fullNameInput">이름</label>
-                    <div class="control">
-                      <input
-                        class="input"
-                        id="fullNameInput"
-                        type="text"
-                        placeholder="유재석"
-                        autocomplete="on"
-                      />
-                    </div>
-                  </div>
-                  <div class="field">
-                    <label class="label" for="emailInput">이메일</label>
-                    <div class="control">
-                      <input
-                        class="input"
-                        id="emailInput"
-                        type="email"
-                        placeholder="abc@example.com"
-                        autocomplete="on"
-                      />
-                    </div>
-                  </div>
-                  <div class="field">
-                    <label class="label" for="passwordInput">비밀번호</label>
-                    <div class="control">
-                      <input
-                        class="input"
-                        id="passwordInput"
-                        type="password"
-                        placeholder="********"
-                        autocomplete="off"
-                      />
-                    </div>
-                  </div>
-                  <div class="field">
-                    <label class="label" for="passwordConfirmInput"
-                      >비밀번호 확인</label
+        <div class="container mb-4" id="container">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <div class="register-user-form-container">
+                            <form class="" id="registerUserForm">
+                                <p class="title is-5 text-dark text-center mb-2" id="title">
+                                    회원가입
+                                </p>
+                                <div class="field">
+                                    <label class="label" for="fullNameInput">이름</label>
+                                    <div class="control">
+                                        <input class="input" id="fullNameInput" type="text" placeholder="유재석" autocomplete="on" />
+                                    </div>
+                                </div>
+                                <div class="field">
+                                    <label class="label" for="emailInput">이메일</label>
+                                    <div class="control">
+                                        <input class="input" id="emailInput" type="email" placeholder="abc@example.com" autocomplete="on" />
+                                    </div>
+                                </div>
+                                <div class="field">
+                                    <label class="label" for="passwordInput">비밀번호</label>
+                                    <div class="control">
+                                        <input class="input" id="passwordInput" type="password" placeholder="********" autocomplete="off" />
+                                    </div>
+                                </div>
+                                <div class="field">
+                                    <label class="label" for="passwordConfirmInput">비밀번호 확인</label
                     >
                     <div class="control">
                       <input
@@ -99,23 +62,18 @@
 
                   <div class="field">
                     <label class="label" for="telInput">전화번호</label>
-                    <div class="control">
-                      <input
-                        class="input"
-                        id="telInput"
-                        type="tel"
-                        placeholder="010-0000-0000"
-                        autocomplete="on"
-                      />
-                    </div>
-                  </div>
+                                    <div class="control">
+                                        <input class="input" id="telInput" type="tel" placeholder="010-0000-0000" autocomplete="on" />
+                                    </div>
+                                </div>
 
-                  <div class="field">
-                    <label
-                      class="label btn btn-primary"
-                      for="adressInput"
+                                <div class="field">
+                                    <label class="label" for="adressInput">주소</label
+                    >
+                    <button
+                      class="btn btn-primary"
                       id="searchAddress"
-                      >주소 찾기</label
+                      >주소 찾기</button
                     >
                     <div class="control">
                       <input
