--- a/src/views/noticeDetail/noticeDetail.html
+++ b/src/views/noticeDetail/noticeDetail.html
@@ -42,10 +42,8 @@
           </div>
         </form>
       </section>
-      <footer
-        class="container-fluid text-center fixed-bottom mb-4"
-        id="footer"
-      ></footer>
+      <section class="footerSection"></section>
+      <footer id="footer"></footer>
     </div>
   </body>
   <script src="/public/js/template-renderer.js"></script>
