--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -35,7 +35,10 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-1"></div>
-          <div class="col-10 itemList"></div>
+          <div class="col-10 itemList">
+
+            
+          </div>
           <div class="col-1"></div>
         </div>
       </div>
@@ -55,10 +58,6 @@
         >
           뒤로가기
         </button>
-
-        <!-- <a class="btn btn-danger ms-5 back" href="javascript:history.back()"
-          >뒤로가기</a
-        > -->
       </div>
 
       <footer
