--- a/src/views/adminpage/adminpage.html
+++ b/src/views/adminpage/adminpage.html
@@ -13,6 +13,8 @@
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/7907d049e5.js" crossorigin="anonymous"></script>
 
+  <script src="../adminRole.js" ></script>
+
   <link rel="stylesheet" href="adminpage.css" />
   <link rel="stylesheet" href="/public/css/public.css" />
 </head>
