--- a/src/views/admin/admin.html
+++ b/src/views/admin/admin.html
@@ -35,10 +35,7 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-1"></div>
-          <div class="col-10 itemList">
-
-            
-          </div>
+          <div class="col-10 itemList"></div>
           <div class="col-1"></div>
         </div>
       </div>
