--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>내 정보</title>
-
-    <script src="../basicRole.js"></script>
+    <title></title>
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
