feat:403, 404, role체커 생성

--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>내 정보</title>
 
-    <script src="../basicRole.js"></script>
+    <script src="/basicRole.js"></script>
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
