--- a/src/views/noticeWrite/noticeWrite.html
+++ b/src/views/noticeWrite/noticeWrite.html
@@ -11,7 +11,9 @@
       sizes="16x16"
       href="/elice-rabbit-favicon.png"
     />
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
+    <script src="/adminRole.js" async defer></script>
+
     <!-- bulma css 관련 -->
     <link
       rel="stylesheet"
@@ -34,7 +36,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./noticeWrite.js" type="module"></script>
+    <script src="./noticeWrite.js" type="module" defer></script>
 
     <link rel="stylesheet" href="noticeWrite.css" />
   </head>
