--- a/src/views/mypage-info/mypage-info.html
+++ b/src/views/mypage-info/mypage-info.html
@@ -19,6 +19,7 @@
     />
     <link rel="stylesheet" href="/public/css/public.css" />
     <link rel="stylesheet" href="mypage-info.css" />
+    <script src="../basicRole.js"></script>
 
     <script src="mypage-info.js" type="module" defer></script>
   </head>
