--- a/src/views/mypage/mypage.html
+++ b/src/views/mypage/mypage.html
@@ -16,6 +16,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script src="../basicRole.js"></script>
     <link rel="stylesheet" href="mypage.css" />
     <link rel="stylesheet" href="/public/css/public.css" />
   </head>
