--- a/src/views/403/403.html
+++ b/src/views/403/403.html
@@ -34,6 +34,18 @@
         id="nav"
       ></nav>
 
+      <img
+        src="./403.png"
+        alt="403"
+        width="50%"
+        height="50%"
+        style="margin: 0 auto"
+      />
+
+      <h1 style="margin: 0 auto; margin-bottom: 50px">
+        해당 페이지를 볼 권한이 존재하지 않습니다!!
+      </h1>
+
       <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
