--- a/src/views/404/404.html
+++ b/src/views/404/404.html
@@ -34,6 +34,18 @@
         id="nav"
       ></nav>
 
+      <img
+        src="./404.png"
+        alt="404"
+        width="50%"
+        height="50%"
+        style="margin: 0 auto"
+      />
+
+      <h1 style="margin: 0 auto; margin-bottom: 50px">
+        대단히 죄송합니다. 해당 페이지를 찾을 수 없습니다.
+      </h1>
+
       <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
