--- a/src/views/notice/notice.html
+++ b/src/views/notice/notice.html
@@ -45,6 +45,8 @@
         class="navbar navbar-expand-xl bg-light d-flex justify-content-evenly sticky-top mb-3"
         id="nav"
       ></nav>
+
+      <h1 style="margin: 0 auto">공지사항</h1>
       <table id="noticeTable">
         <thead>
           <tr>
@@ -52,9 +54,7 @@
             <td>생성일</td>
           </tr>
         </thead>
-        <tbody id="noticeList">
-          <tr></tr>
-        </tbody>
+        <tbody id="noticeList"></tbody>
       </table>
 
       <div id="checkRes"></div>
