--- a/src/views/notice/notice.css
+++ b/src/views/notice/notice.css
@@ -1,11 +1,25 @@
 #noticeTable {
-  border: 2px solid #000000;
+  border: 5px solid #000000;
   width: 800px;
-  padding: 10px;
-  border-radius: 10px;
   margin: 0 auto;
   margin-top: 30px;
 }
-#noticeTable > tbody {
+thead {
+  border: 1px solid #ff0000;
+  margin-bottom: 10px;
+}
+
+tbody {
+  border: 1px solid #00ff00;
   padding: 10px;
+}
+
+tr {
+  border: 2px solid #5f5f5f;
+  padding: 10px;
+  margin: 4px;
+}
+
+td {
+  padding-left: 20px;
 }
