--- a/src/views/notice/notice.html
+++ b/src/views/notice/notice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>주문 조회</title>
+    <title>공지 사항</title>
     <link
       rel="icon"
       type="image/png"
@@ -12,7 +12,7 @@
       href="/elice-rabbit-favicon.png"
     />
     <link rel="stylesheet" href="/public/css/public.css" />
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
     <!-- bulma css 관련 -->
     <link
       rel="stylesheet"
